--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1370,7 +1370,7 @@
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Invia audio",
-    "send-code-totp": "Enviar código TOTP",
+    "send-code-totp": "Inviare codice TOTP",
     "send-documents": "Inviare documenti",
     "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
