--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1370,7 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Envia àudios",
-    "send-code-totp": "Enviar código TOTP",
+    "send-code-totp": "Enviar codi TOTP",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1583,7 +1583,7 @@
     "totaliva-value-error": "El total del IVA de %docType% %docCode% és incorrecte (%docTotalTax%). La cantitat correcta és: %calcTotalTax%",
     "totallinea-value-error": "Erro en el valor totallinea de la llínea del IVA de l'impost %taxCode% de la factura. El valor correcte és: %totalLine%",
     "totals": "Totals",
-    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
+    "totp-secret-key-not-set": "L'usuari %nick% no té una clau secreta TOTP configurada",
     "town": "Ciutat",
     "tracking-code": "tracking-code",
     "transfer": "Transferència",
