Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adult",
     "advanced": "Avançat",
+    "age": "edat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -160,6 +161,7 @@
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
     "birth-date": "Data de naixement",
+    "birthdate": "Data de naixement",
     "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
@@ -596,6 +598,7 @@
     "exercises": "Exercicis",
     "exit": "Sortir",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Subcompte de despeses",
     "expenses": "despeses",
     "expiration": "Venciment",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Llegir més",
     "readonly": "Només lectura",
+    "reason": "Motiu",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucció completada",
     "rebuild-stock": "reconstruir stock",
