--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -65,6 +65,7 @@
     "administrator": "Verwalter",
     "adult": "Erwachsene",
     "advanced": "Avanzado",
+    "age": "Alter",
     "agent": "Agent",
     "agent-commission-info": "gilt nur für den ausgewählten Agenten",
     "agent-dont-have-associated-supplier": "der Agent hat keinen assoziierten Lieferanten",
@@ -160,6 +161,7 @@
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
     "birth-date": "Geburtsdatum",
+    "birthdate": "Geburtsdatum",
     "birthday": "Geburtstag",
     "block-date": "Sperrungsdatum",
     "blocked": "verstopft",
@@ -596,6 +598,7 @@
     "exercises": "Übungen",
     "exit": "Beenden",
     "expedient": "Verfahren",
+    "expedients": "Expediente",
     "expense-subaccount": "Aufwandsunterkonto",
     "expenses": "Kosten",
     "expiration": "Ablauf",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Gelesen von %nick% am %date%",
     "read-more": "Mehr lesen",
     "readonly": "Nur lesen",
+    "reason": "Grund",
     "rebuild": "Wiederherstellen",
     "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
