--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -65,6 +65,7 @@
     "administrator": "Administrator",
     "adult": "Adult",
     "advanced": "Advanced",
+    "age": "Age",
     "agent": "Agent",
     "agent-commission-info": "It will only apply to the selected agent",
     "agent-dont-have-associated-supplier": "The agent don't have an associated supplier",
@@ -160,6 +161,7 @@
     "billing": "Billing",
     "billing-address": "Billing address",
     "birth-date": "Birth date",
+    "birthdate": "Date of birth",
     "birthday": "Birthday",
     "block-date": "Block date",
     "blocked": "Blocked",
@@ -596,6 +598,7 @@
     "exercises": "Exercises",
     "exit": "Exit",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Expense subaccount",
     "expenses": "Expenses",
     "expiration": "Expiration",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Read by %nick% on %date%",
     "read-more": "Read more",
     "readonly": "Read only",
+    "reason": "Reason",
     "rebuild": "Rebuild",
     "rebuild-completed": "Rebuild completed",
     "rebuild-stock": "Rebuild stock",
