--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "edad",
     "agent": "Encargado",
     "agent-commission-info": "Sólo se aplicará al encargado seleccionado",
     "agent-dont-have-associated-supplier": "El encargado no tiene un proveedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
+    "birthdate": "Fecha de nacimiento",
     "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
     "blocked": "Bloqueado",
@@ -596,6 +598,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subcuenta para gastos bancarios",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
