--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administratzailea",
     "adult": "Heldua",
     "advanced": "Aurreratua",
+    "age": "adina",
     "agent": "Agentea",
     "agent-commission-info": "Aukeratutako agenteari bakarrik eragingo dio",
     "agent-dont-have-associated-supplier": "Agenteak ez du hornitzale bat lotuta",
@@ -160,6 +161,7 @@
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
     "birth-date": "Jaiotze data",
+    "birthdate": "Jaiotza data",
     "birthday": "Urtebetetzea",
     "block-date": "Blokeatze data",
     "blocked": "Blokeatuta",
@@ -596,6 +598,7 @@
     "exercises": "Ekitaldiak",
     "exit": "Irten",
     "expedient": "Espediente",
+    "expedients": "Fitxategiak",
     "expense-subaccount": "Gastuen azpikontua",
     "expenses": "Gastuak",
     "expiration": "Iraungitzea",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Irakurri %nick% %date% hartan",
     "read-more": "Gehiago irakurri",
     "readonly": "Irakurri bakarrik",
+    "reason": "Arrazoia",
     "rebuild": "Berregin",
     "rebuild-completed": "Berreraikuntza amaitua",
     "rebuild-stock": "Stocka berritu",
