--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -65,6 +65,7 @@
     "administrator": "administrateur",
     "adult": "Adulte",
     "advanced": "Avancé",
+    "age": "Âge",
     "agent": "Agent",
     "agent-commission-info": "Cela s'appliquera uniquement à l'agent sélectionné",
     "agent-dont-have-associated-supplier": "L'agent ne possède pas de fournisseur attitré",
@@ -160,6 +161,7 @@
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
     "birth-date": "Date de naissance",
+    "birthdate": "date de naissance",
     "birthday": "Anniversaire",
     "block-date": "Date de verrouillage",
     "blocked": "Bloqué",
@@ -596,6 +598,7 @@
     "exercises": "Des exercices",
     "exit": "Sortie",
     "expedient": "Expéditeur",
+    "expedients": "Expédients",
     "expense-subaccount": "Sous-compte des dépenses",
     "expenses": "Dépenses",
     "expiration": "Délai d'échéance",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Lu par %nick% le %date%",
     "read-more": "En savoir plus",
     "readonly": "Lecture seule",
+    "reason": "Raison",
     "rebuild": "Reconstituer",
     "rebuild-completed": "Reconstitution achevée",
     "rebuild-stock": "Reconstituer le stock",
