--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "idade",
     "agent": "Axente",
     "agent-commission-info": "Só se aplicará ao axente seleccionado",
     "agent-dont-have-associated-supplier": "O axente non ten un provedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
     "birth-date": "Data de nacemento",
+    "birthdate": "Data de nacemento",
     "birthday": "Aniversario",
     "block-date": "Data de bloqueo",
     "blocked": "Bloqueado",
@@ -596,6 +598,7 @@
     "exercises": "Exercicios",
     "exit": "Saír",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subconta de gastos",
     "expenses": "Gastos",
     "expiration": "Caducidade",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Lido por %nick% o %date%",
     "read-more": "Ler máis",
     "readonly": "Só lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
