--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -65,6 +65,7 @@
     "administrator": "amministratore",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "età",
     "agent": "Agente",
     "agent-commission-info": "agente-commissione-info",
     "agent-dont-have-associated-supplier": "agente-non-ha-fornitori-affiliati",
@@ -160,6 +161,7 @@
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Data di nascita",
+    "birthdate": "data di nascita",
     "birthday": "Compleanno",
     "block-date": "Data di blocco",
     "blocked": "bloccato",
@@ -596,6 +598,7 @@
     "exercises": "esercizi",
     "exit": "uscita",
     "expedient": "pratica",
+    "expedients": "Pratiche",
     "expense-subaccount": "Sottoconto per spese bancarie",
     "expenses": "Spese",
     "expiration": "Scadenza",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Letto da %nick% il %date%",
     "read-more": "Leggi di più",
     "readonly": "sola lettura",
+    "reason": "Motivo",
     "rebuild": "ricostruire",
     "rebuild-completed": "Ricostruzione completata",
     "rebuild-stock": "Ricostruisci stock",
