--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -65,6 +65,7 @@
     "administrator": "Administrator",
     "adult": "Dorosły",
     "advanced": "Zaawansowane",
+    "age": "wiek",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
@@ -160,6 +161,7 @@
     "billing": "Fakturowanie",
     "billing-address": "Adres do faktury",
     "birth-date": "Data urodzenia",
+    "birthdate": "Data urodzenia",
     "birthday": "Urodziny",
     "block-date": "Data blokady",
     "blocked": "Zablokowany",
@@ -596,6 +598,7 @@
     "exercises": "Ćwiczenia",
     "exit": "Wyjdź",
     "expedient": "Akta",
+    "expedients": "Ekspedycje",
     "expense-subaccount": "Subkonto wydatków",
     "expenses": "Wydatki",
     "expiration": "Wygaszenie",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Czytaj więcej",
     "readonly": "Tylko do odczytu",
+    "reason": "Powód",
     "rebuild": "Rekonstruować",
     "rebuild-completed": "Przebudowa zakończona",
     "rebuild-stock": "Odbudować zapas",
