--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avançado",
+    "age": "idade",
     "agent": "Agente",
     "agent-commission-info": "agente-comissão-informação",
     "agent-dont-have-associated-supplier": "agente-não-tem-associado-fornecedor",
@@ -160,6 +161,7 @@
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
+    "birthdate": "Data de nascimento",
     "birthday": "Aniversário",
     "block-date": "Data de bloqueio",
     "blocked": "Bloqueado",
@@ -596,6 +598,7 @@
     "exercises": "Exercícios",
     "exit": "Sair",
     "expedient": "Expediente",
+    "expedients": "Processos",
     "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
     "expiration": "Vencimento",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Ler mais",
     "readonly": "Somente leitura",
+    "reason": "razão",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
