--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adult",
     "advanced": "Avançat",
+    "age": "edat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -160,6 +161,7 @@
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
     "birth-date": "Data de naiximent",
+    "birthdate": "Data de naixement",
     "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
@@ -596,6 +598,7 @@
     "exercises": "Eixercicis",
     "exit": "Eixir",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Subconte de despeses",
     "expenses": "Despeses",
     "expiration": "Venciment",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Només lectura",
+    "reason": "reason",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucció completada",
     "rebuild-stock": "Reconstruir estoc",
