--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -65,6 +65,7 @@
     "administrator": "Správce",
     "adult": "Dospělý",
     "advanced": "Pokročilé",
+    "age": "stáří",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
+    "birthdate": "Datum narození",
     "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
     "blocked": "Bloqueado",
@@ -596,6 +598,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subúčet nákladů",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
@@ -1260,6 +1263,7 @@
     "read-message-by": "Čteno uživatelem %nick% dne %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
