--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -550,7 +550,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar linhas",
-    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
+    "error-generating-qr-code": "Não foi possível gerar o QR: %message%, %url%",
     "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
